# conlang-experiment

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
data/: download-english.sh  download-esperanto.sh
docs/: preregistration.md
eval/: benchmark.py
tokenizer/: tokenizer_train.py
train/: prepare_local.py  program.md
