[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "conlang-experiment"
version = "0.1.0"
description = "Empirical comparison of LLM pre-training on English vs. Esperanto Wikipedia"
requires-python = ">=3.11"
dependencies = [
    "tokenizers>=0.20.0",
    "datasets>=2.20.0",
    "tqdm>=4.66.0",
    "numpy>=1.26.0",
    "matplotlib>=3.9.0",
    "rich>=13.7.0",
    "click>=8.1.0",
]

[project.optional-dependencies]
train = [
    # MLX — Apple Silicon native (M1/M2/M3/M4)
    # autoresearch-mlx: https://github.com/trevin-creator/autoresearch-mlx
    "mlx>=0.16.0",
    "mlx-lm>=0.15.0",
]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.4.0",
]

[project.scripts]
train-tokenizer = "tokenizer.tokenizer_train:cli"
benchmark = "eval.benchmark:cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["tokenizer*", "eval*", "train*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
